# Akx

./: .gitignore  README.md  config.py  main.py  memory.py  pyproject.toml
agent/: graph.py  llm_factory.py  nodes.py  state.py
agent/tools/: files.py  registry.py  shell.py  web_search.py
docs/: CLI_AGENT_CHECKLIST.md  NEXT_STEPS.md  PHASE_1.md  PHASE_2.md  PHASE_3.md
