[project]
name = "akx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "langchain-core",
    "langchain-openai",
    "langgraph",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "rich",
    "typer",
    "langchain_groq",
    "dotenv",
    "langchain_google_genai"
]
